--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<link rel="shortcut icon" type="image/ico" href="#" />
         
         <link rel="stylesheet" href="_css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="_js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -31,7 +31,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="_js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="_js/main.min.js"></script>
+        <script src="_js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
